@@ -58,10 +58,13 @@ public slots:
 private:
 	void addInputNoCheck (RCommand *command);
 	void addOutputNoCheck (RCommand *command, const QString &output);
+	void checkRaiseWatch (RCommand *command);
 /** internal helper function, called whenever a line/lines have been added. Check whether log is longer than maximum setting. Scroll to the bottom */
 	void linesAdded ();
 /** A pointer to the last command the input (i.e. the command itself) was shown for. Used to keep track of whether a command's input should be shown or not */
 	RCommand *command_input_shown;
+/** On a given command, the watch should not be raised more than once */
+	RCommand *last_raised_command;
 
 	QTextEdit *watch;
 	QBoxLayout* pLayout;
